--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -56,6 +56,13 @@
 	URL = {http://www.emc.com/collateral/analyst-reports/idc-extracting-value-from-chaos-ar.pdf},
 }
 
+@article{koche1997,
+	Title={Fundamentos de metodologia cient{\'\i}fica},
+	Author={K{\"o}che, Jos{\'e} Carlos},
+	Journal={Petr{\'o}polis: Vozes},
+	Year={1997}
+}
+
 @article{madhavji2015,
 	Author = {Nazim H. Madhavji and Andriy Miranskyy and Kostas Kontogiannis},
 	Title = {Big Picture of Big Data Software Engineering},
@@ -115,6 +122,13 @@
   	Author={Karau, Holden and Konwinski, Andy and Wendell, Patrick and Zaharia, Matei},
   	Year={2015},
   	Publisher={" O'Reilly Media, Inc."}
+}
+
+@book{prodanov2013,
+	Title={Metodologia do Trabalho Cient{\'\i}fico: M{\'e}todos e T{\'e}cnicas da Pesquisa e do Trabalho Acad{\^e}mico-2{\textordfeminine} Edi{\c{c}}{\~a}o},
+	Author={Prodanov, Cleber Cristiano and de Freitas, Ernani Cesar},
+	Year={2013},
+	Publisher={Editora Feevale}
 }
 
 @book{russell2013,
@@ -200,6 +214,22 @@
 	Address = {Rio de Janeiro, Brasil},
 	Pages = {75},
 	isbn = {85-87090-90-9},
+}
+
+@incollection{gil2010,
+	Title={M{\'e}todos e t{\'e}cnicas de pesquisa social},
+	Author={Gil, Antonio Carlos},
+	Booktitle={M{\'e}todos e t{\'e}cnicas de pesquisa social},
+	Year={2010},
+	Publisher={Atlas}
+}
+
+@incollection{lakatos2010,
+	Title={Fundamentos da metodologia cient{\'\i}fica},
+	Author={Lakatos, Eva Maria and Marconi, Marina de Andrade},
+	Booktitle={Fundamentos da metodologia cient{\'\i}fica},
+	Year={2010},
+	Publisher={Altas}
 }
 
 @inproceedings{alam2014,
