--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -155,7 +155,7 @@
     demais capítulos são resumidos brevemente a seguir:
 
     \begin{itemize}
-        \item \textbf{Revisão sistemática:} Neste capítulo existirão subtópicos explicando alguns conceitos de CDR de forma mais
+        \item \textbf{Revisão sistemática:} Neste capítulo existirão subtópicos explicando alguns conceitos de forma mais
                                                                     aprofundada, e também os ferramentais como \textit{Hadoop, Yarn, MapReduce, Spark,
                                                                     Impala} e dentre outras ferramentas caso haja necessidade de inclusão, para o
                                                                     aperfeiçoamento do processamento de dados.
