--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -3,7 +3,7 @@
 \curso{Engenharia de Software}
 
 % Dados do trabalho
-\titulo{Análise de Desempenho em Arquiteturas Distríbuidas para Mobilidade Urbana}
+\titulo{Análise de Desempenho em Arquiteturas Distribuídas para Mobilidade Urbana}
 \data{2016}
 \palavraChaveUm{Big Data}
 \palavraChaveDois{Mobilidade Urbana}
@@ -16,6 +16,6 @@
 \cdu{02:141:005.6}
 
 % Dados da aprovação do trabalho
-\dataDaAprovacao{01 de junho de 2016}
+\dataDaAprovacao{17 de junho de 2016}
 \membroConvidadoUm{Titulação e Nome do Professor Convidado 01}
 \membroConvidadoDois{Titulação e Nome do Professor Convidado 02}
